# ztrezor

./: .gitignore  M.1_report.md  M.2_report.md  M.3_report.md  README.md  final_report.md  pyproject.toml
client/: Cargo.toml
client/src/: main.rs
doc/: README.md  backup.md  deprecated.md  implementation.md  suite.md  zcash_overview.md
get_tests/: test_zcash_get_address.py
poseidon_constants/: generate_parameters_grain.sage  generate_parameters_grain.sage.py
python/: api.py  cases.py  common.py  consts.sage.py  expected_messages.py  fund.py  getcmxs.py  poseidon.py  poseidon.sage.py  ref.py  render.py  render_all.py  send.py  trezor.py  ttrezor.py  tx.py  tx_inputs.py  zingo.py  ztx.py
test_keys/: Cargo.toml
test_keys/src/: main.rs
testvectors/: Cargo.toml
testvectors/src/: main.rs  shuffle.rs  transaction.rs  utils.rs  write_v5_bundle.rs
verify_signature/: Cargo.toml
verify_signature/src/: main.rs
witness_getter/: Cargo.toml
witness_getter/src/: main.rs
witnesses/: anchor
