[package]
name = "testvectors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default_features = false }
rand_chacha = { version = "0.3.1", default-features = false }
hex = "0.4"
incrementalmerkletree = "0.3"
bech32 = "0.8"

[dependencies.orchard]
path = "/home/agi/gh/jarys/orchard"
#git = "https://github.com/jarys/orchard"
#branch = "main"
#default-features = false
features = ["test-dependencies"]

[dependencies.f4jumble]
git = "https://github.com/zcash/librustzcash"
rev = "6e39480c589bcb1b548c507aa96575368e72952a"
default-features = false
